2010-09-10  KUBO Takehiro  <kubo@jiubao.org>
	* test/test_array_dml.rb: delete workaround code. It now works
	    fine on rubinius head.

2010-09-07  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/extconf.rb, ext/oci8/oci8lib.c: Don't use
	    rb_set_end_proc() when it isn't available.
	* ext/oci8/extconf.rb, lib/oci8.rb.in: add RUBY_ENGINE to
	    the C extension library name when RUBY_ENGINE is not "ruby."
	* ext/oci8/oci8.c: fix for ruby 1.8.
	* test/test_clob.rb: change a temporarily used table name for test
	    from 'test_clob' to 'test_table.'
	* test/test_metadata.rb: delete ruby 1.9 feature to work on ruby 1.8.
	* test/config.rb: add a support function 'drop_type' for future test
	    cases.
	* test/test_array_dml.rb: skip test_array_insert1 on rubinius.
	    This will be enabled after the rubinius issue #445 is fixed.

2010-09-05  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/extconf.rb, ext/oci8/oci8.h, ext/oci8/oci8lib.c,
	  ext/oci8/ocinumber.c: use rb_intern() to retrieve IDs of '+', '-',
	    '*' and '/' on rubinus.
	* ext/oci8/oradate.c: use rb_call_super() instead of
	    rb_obj_init_copy(), which is not declared in rubinus.

2010-08-28  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/env.c: fix for rubinius.

2010-08-28  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/env.c, ext/oci8/error.c, ext/oci8/extconf.rb, ext/oci8/oci8.c,
	  ext/oci8/oci8.h, oci8/oci8lib.c, ext/oci8/ocinumber.c: fix for rubinius.
	    Note that this is not enough to compile ruby-oci8 on it.

2010-08-23  KUBO Takehiro  <kubo@jiubao.org>
	* lib/oci8/object.rb: fix an error when SDO_GEOMETRY is used
	    and $VERBOSE is set.
	* test/test_metadata.rb: (1) fix errors caused by String + Symbol.
	    They worked on ruby 1.9.2 but not on 1.8.7 and 1.9.2.
	    (2) replace "assert_equal(class, object.class)" with
	    "assert_instance_of(class, object)."
	* test/test_oranumber.rb: change a testcase for ruby 1.9.2.
	    Math::atan2(0, 0) behaviour was changed in 1.9.2.
